--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,15 +3,12 @@ version: 2
 build:
   os: "ubuntu-20.04"
   tools:
-    python:
-      # Install our python package before building the docs
+    python: "3.8"
       install:
         - method: pip
           path: .
-
 sphinx:
   fail_on_warning: true
-
 formats:
   - pdf
   - epub
